product-service/product.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-backend
  labels:
    app: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: adimasfachri/simple-microservices:product
        ports:
        - name: http
          containerPort: 8005
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product
  ports:
    - name: http
      protocol: TCP
      port: 8005
      targetPort: http
